Finished spacing fix and started phot uploader fix

--- a/src/views/MyProfile/myProfile.scss
+++ b/src/views/MyProfile/myProfile.scss
@@ -52,6 +52,46 @@
   }
 }
 
+.gc360-photo-dialog {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  &_title {
+    grid-row: 1;
+  }
+  &_content {
+    display: grid;
+    grid-row: 2;
+    &_text {
+      grid-column: 1;
+    }
+    &_dropzone {
+      &_content {
+        transition: border-color 0.3s, background-color 0.3s, box-shadow 0.3s;
+        width: 18rem;
+        height: 18rem;
+        display: flex;
+        border-style: dashed;
+        border-width: 0.2rem;
+        border-radius: 1rem;
+        border-color: darkgray;
+        &:hover {
+          background-color: #dddddd;
+          box-shadow: 0 0 0 0.25rem #dddddd;
+        }
+      }
+    }
+    &_cropper {
+      grid-column: 1;
+    }
+    &_button {
+      grid-column: 1;
+    }
+  }
+  &_actions {
+    grid-row: 3;
+  }
+}
+
 @media (min-width: $break-sm) {
   .profile-image {
     position: 'relative';
